<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2016.
  ~ Bucher Andreas, Fink Simon Dominik, Fraedrich Christoph, Popp Wolfgang,
  ~ Sell Leon, Werli Philemon
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<!--@author Team-->
<resources>
    <string name="app_name">Secure Smart Home - Master</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_qrcode_activity">Master - Add Initial Device</string>

    <string name="action_settings">Settings</string>
    <string name="please_scan_device">Scan the QR-Code with your Android device to register it as first admin device.</string>
    <string name="qr_code_description">This is a QR-Code.</string>
    <string name="title_activity_register_local_app">Register Local App </string>
    <string name="title_activity_register_local_slave">Register Local Slave</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="preferences">Preferences</string>

    <!--SharedPreferencesKey, don't translate-->
    <string name="master_city_name" translatable="false">master_city_name</string>
    <string name="master_port_local" translatable="false">master_port_local</string>
    <string name="master_port_intern" translatable="false">master_port_intern</string>
    <string name="master_port_extern" translatable="false">master_port_extern</string>

    <!--Used in the MainActivity-->
    <string name="connected_user_devices">Connected User Devices</string>
    <string name="connected_slaves">Connected Slaves</string>
    <string name="slave_name">Slave: %s</string>
    <string name="userdevice_name">User Device: %s</string>
    <string name="address_format">Address: %s</string>
    <string name="id_format">ID: %s</string>
    <string name="closed_connection_with">Closed Connection with: %s</string>

    <!--others-->

    <string name="master_city_name_summary">Name of the city for weather forecast</string>
    <string name="master_port_extern_summary">Opened to connect to master from extern</string>
    <string name="master_port_intern_summary">Opened on Master to accept connections from extern</string>
    <string name="master_port_local_summary">Local port to connect to master</string>
    <string name="invalid_port">Invalid port entered. Please only enter Ports from 1024 to 65535</string>
    <string name="invalid_city">Invalid city name.</string>
    <string name="active_connections">Connections</string>
    <string name="proceed">Proceed</string>
    <string name="please_configure_the_ssh">Please configure the Secure Smart Home Master before adding the first admin device.</string>
    <string name="register">Register</string>
    <string name="ignore">Ignore</string>
    <string name="register_local_app">Register the locally installed Secure Smart Home App with this Master?</string>
    <string name="register_local_slave">Register the locally installed Secure Smart Home Slave with this Master?</string>
    <string name="please_set_prefs">Please set all preferences before continuing</string>
    <string name="server_not_started">Server not started yet, please wait for Server startup</string>
    <string name="local_app">Local App</string>
    <string name="name_in_use">Name already in use</string>
    <string name="local_slave">Local Slave</string>
    <string name="label_device_name">Name of the Device</string>
</resources>
