<?xml version="1.0" encoding="utf-8"?>
<!--@author Phil Werli-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/slavelayout_slave_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slave_name"
        android:textSize="@dimen/typography_subheadline"
        android:textStyle="bold"
        />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/slavelayout_slave_address"
            android:layout_column="1"
            android:text="@string/address_format"/>

        <TextView
            android:id="@+id/slavelayout_slave_id"
            android:layout_gravity="right"
            android:text="@string/id_format"
            />
    </TableRow>
</LinearLayout>