<?xml version="1.0" encoding="utf-8"?>
<!--@author Phil Werli-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userdevicelayout_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userdevice_name"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userdevicelayout_device_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_format"/>

        <TextView
            android:id="@+id/userdevicelayout_device_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/id_format"/>
    </LinearLayout>
</LinearLayout>